Fix homepage header title not responsive

--- a/styles/header.css
+++ b/styles/header.css
@@ -54,6 +54,7 @@
 
   .header h1 {
     margin: 10px 0;
+    white-space: wrap;
   }
 
   .links {
